--- a/front-fix/src/styles/extranet/loader.module.css
+++ b/front-fix/src/styles/extranet/loader.module.css
@@ -1,8 +1,8 @@
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #FFF;
-  border-bottom-color: var(--primary-color);
+  border: 5px solid rgba(106, 130, 251, 0.2);
+  border-bottom-color: #6a82fb;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
@@ -11,6 +11,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 0 20px rgba(106, 130, 251, 0.3);
 }
 
 .loaderContainer {
@@ -18,17 +19,25 @@
   width: 100%;
   height: 100%;
   min-height: 200px;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(40, 44, 80, 0.95);
   display: flex;
   justify-content: center;
   align-items: center;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(106, 130, 251, 0.2);
+  border-radius: 1rem;
 }
 
 @keyframes rotation {
   0% {
     transform: translate(-50%, -50%) rotate(0deg);
+    border-bottom-color: #6a82fb;
+  }
+  50% {
+    border-bottom-color: #fc5c7d;
   }
   100% {
     transform: translate(-50%, -50%) rotate(360deg);
+    border-bottom-color: #6a82fb;
   }
 } 
